// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Articles A11y I can see the skip to content link 1`] = `"Skip to content"`;

exports[`Canonical Articles Analytics ATI 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" src="https://logws1363.ati-host.net?s=598286&amp;s2=64&amp;p=news.articles.c0g992jmmkko.page&amp;x1=[urn%3Abbc%3Aoptimo%3Aasset%3Ac0g992jmmkko]&amp;x2=[responsive]&amp;x3=[news]&amp;x4=[en-gb]&amp;x7=[article]&amp;x8=[simorgh-nojs]&amp;x9=[Royal%2520wedding%2520flowers%2520given%2520to%2520Hackney%2520hospice]&amp;x11=[2019-05-28T13%3A38%3A19.412Z]&amp;x12=[2019-05-28T13%3A38%3A19.412Z]&amp;x13=[Wedding%2Bof%2BPrince%2BHarry%2Band%2BMeghan%2BMarkle~Duchess%2Bof%2BSussex~Hackney~Windsor]&amp;x14=[2351f2b2-ce36-4f44-996d-c3c4f7f90eaa~803eaeb9-c0c3-4f1b-9a66-90efac3df2dc~dba7dfeb-87d3-4801-80ba-fa8be6c9555e~f94940f0-476c-4ec7-b48d-e58120bb1956]&amp;x17=[Wedding%2Bof%2BPrince%2BHarry%2Band%2BMeghan%2BMarkle~Duchess%2Bof%2BSussex~Hackney~Windsor]"/>"`;

exports[`Canonical Articles Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News",
  "url": "/news",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 2`] = `
{
  "text": "Why you can trust the BBC",
  "url": "https://www.bbc.com/news/help-41670342",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 3`] = `
{
  "text": "Terms of Use",
  "url": "https://www.bbc.com/terms",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 4`] = `
{
  "text": "About the BBC",
  "url": "https://www.bbc.co.uk/aboutthebbc/",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 5`] = `
{
  "text": "Privacy Policy",
  "url": "https://www.bbc.com/privacy/",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 7`] = `
{
  "text": "Accessibility Help",
  "url": "https://www.bbc.com/accessibility/",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 8`] = `
{
  "text": "Contact the BBC",
  "url": "https://www.bbc.com/contact/",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 9`] = `
{
  "text": "Read about our approach to external linking.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical Articles Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/news"`;

exports[`Canonical Articles Footer Paragraphs should match text 1`] = `"© 2024 BBC. The BBC is not responsible for the content of external sites. Read about our approach to external linking."`;

exports[`Canonical Articles Header I can see the branding 1`] = `"BBC News"`;

exports[`Canonical Articles Header Navigation link should match text and url 1`] = `
{
  "text": "Home",
  "url": "/news",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 2`] = `
{
  "text": "UK",
  "url": "/news/uk",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 3`] = `
{
  "text": "World",
  "url": "/news/world",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 4`] = `
{
  "text": "Business",
  "url": "/news/business",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 5`] = `
{
  "text": "Politics",
  "url": "/news/politics",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 6`] = `
{
  "text": "Tech",
  "url": "/news/technology",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 7`] = `
{
  "text": "Science",
  "url": "/news/science_and_environment",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 8`] = `
{
  "text": "Health",
  "url": "/news/health",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 9`] = `
{
  "text": "Family & Education",
  "url": "/news/education",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 10`] = `
{
  "text": "Entertainment & Arts",
  "url": "/news/entertainment_and_arts",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 11`] = `
{
  "text": "Stories",
  "url": "/news/stories",
}
`;

exports[`Canonical Articles Image Caption should match text 1`] = `"Image caption, Former embroider Pauline Clayton described the gift as "lovely""`;

exports[`Canonical Articles Image Copyright BBC should match snapshot 1`] = `null`;

exports[`Canonical Articles Image should match snapshot 1`] = `
<img
  alt="Pauline Clayton"
  class="bbc-139onq"
  height="360"
  sizes="(min-width: 1008px) 760px, 100vw"
  src="https://ichef.bbci.co.uk/ace/ws/640/cpsdevpb/e8d3/test/98b75f50-814d-11e9-b0be-cb6d2b512d8b.jpg"
  srcset="https://ichef.bbci.co.uk/ace/ws/240/cpsdevpb/e8d3/test/98b75f50-814d-11e9-b0be-cb6d2b512d8b.jpg 240w, https://ichef.bbci.co.uk/ace/ws/320/cpsdevpb/e8d3/test/98b75f50-814d-11e9-b0be-cb6d2b512d8b.jpg 320w, https://ichef.bbci.co.uk/ace/ws/480/cpsdevpb/e8d3/test/98b75f50-814d-11e9-b0be-cb6d2b512d8b.jpg 480w, https://ichef.bbci.co.uk/ace/ws/624/cpsdevpb/e8d3/test/98b75f50-814d-11e9-b0be-cb6d2b512d8b.jpg 624w, https://ichef.bbci.co.uk/ace/ws/640/cpsdevpb/e8d3/test/98b75f50-814d-11e9-b0be-cb6d2b512d8b.jpg 640w"
  style="aspect-ratio:640 / 360"
  width="640"
/>
`;

exports[`Canonical Articles Main heading should match text 1`] = `"Royal wedding flowers given to Hackney hospice"`;

exports[`Canonical Articles Most Read has item with rank 1`] = `
{
  "text": "Why the oxygen timeline on sub may not be so fixed",
  "url": "/news/world-us-canada-65981277",
}
`;

exports[`Canonical Articles Most Read has item with rank 2`] = `
{
  "text": "MasterChef contestant jailed for child abuse images",
  "url": "/news/uk-wales-65986742",
}
`;

exports[`Canonical Articles Most Read has item with rank 3`] = `
{
  "text": "Musk and Zuckerberg agree to hold cage fight",
  "url": "/news/business-65981876",
}
`;

exports[`Canonical Articles Most Read has item with rank 4`] = `
{
  "text": "Cindy Beale returns to EastEnders after 25 years",
  "url": "/news/entertainment-arts-65986136",
}
`;

exports[`Canonical Articles Most Read has item with rank 5`] = `
{
  "text": "Mosquito-borne diseases risk increasing in Europe",
  "url": "/news/health-65985838",
}
`;

exports[`Canonical Articles Most Read has item with rank 6`] = `
{
  "text": "Teenager guilty of murdering boy at train station",
  "url": "/news/uk-scotland-65987986",
}
`;

exports[`Canonical Articles Most Read has item with rank 7`] = `
{
  "text": "At least 30 migrants feared dead off Canary Islands",
  "url": "/news/world-65983001",
}
`;

exports[`Canonical Articles Most Read has item with rank 8`] = `
{
  "text": "Bank boss warns interest rate hike hard for many",
  "url": "/news/business-65982981",
}
`;

exports[`Canonical Articles Most Read has item with rank 9`] = `
{
  "text": "Ukraine strikes bridge to Crimea, says Russia",
  "url": "/news/world-europe-65982817",
}
`;

exports[`Canonical Articles Most Read has item with rank 10`] = `
{
  "text": "The woman who wants to end abortion in America",
  "url": "/news/world-us-canada-65923956",
}
`;

exports[`Canonical Articles Paragraph should match paragraph text 1`] = `"Image source, St Joseph's Hospice"`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/news/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Articles SEO Canonical link 1`] = `"http://localhost:7080/news/articles/c0g992jmmkko"`;

exports[`Canonical Articles SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Articles SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Articles SEO Heading level 1 1`] = `"Royal wedding flowers given to Hackney hospice"`;

exports[`Canonical Articles SEO Lang attribute 1`] = `"en-gb"`;

exports[`Canonical Articles SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "NewsArticle",
      "about": [
        {
          "@type": "Thing",
          "name": "Wedding of Prince Harry and Meghan Markle",
        },
        {
          "@type": "Person",
          "name": "Duchess of Sussex",
          "sameAs": [
            "http://dbpedia.org/resource/Meghan_Markle",
          ],
        },
        {
          "@type": "Place",
          "name": "Hackney",
        },
        {
          "@type": "Place",
          "name": "Windsor",
        },
      ],
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News",
        "noBylinesPolicy": "https://www.bbc.com/news/help-41670342#authorexpertise",
      },
      "dateModified": "2019-05-28T13:38:19.412Z",
      "datePublished": "2019-05-28T13:38:19.412Z",
      "description": "Royal wedding flowers given to Hackney hospice",
      "headline": "Royal wedding flowers given to Hackney hospice",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "en-GB",
        "name": "English",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/news/articles/c0g992jmmkko",
        "@type": "WebPage",
        "name": "Royal wedding flowers given to Hackney hospice",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 16,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/publisher-nx16.png",
          "width": 103,
        },
        "name": "BBC News",
        "publishingPrinciples": "https://www.bbc.com/news/help-41670342",
      },
      "thumbnailUrl": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
      "url": "http://localhost:7080/news/articles/c0g992jmmkko",
    },
  ],
}
`;

exports[`Canonical Articles SEO OG description 1`] = `"Royal wedding flowers given to Hackney hospice"`;

exports[`Canonical Articles SEO OG image 1`] = `"https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png"`;

exports[`Canonical Articles SEO OG image alt 1`] = `"BBC News"`;

exports[`Canonical Articles SEO OG locale 1`] = `"en_GB"`;

exports[`Canonical Articles SEO OG site name 1`] = `"BBC News"`;

exports[`Canonical Articles SEO OG title 1`] = `"Royal wedding flowers given to Hackney hospice - BBC News"`;

exports[`Canonical Articles SEO OG type 1`] = `"article"`;

exports[`Canonical Articles SEO OG url 1`] = `"http://localhost:7080/news/articles/c0g992jmmkko"`;

exports[`Canonical Articles SEO Page title 1`] = `"Royal wedding flowers given to Hackney hospice - BBC News"`;

exports[`Canonical Articles SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Articles SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Articles SEO Twitter creator 1`] = `"@BBCNews"`;

exports[`Canonical Articles SEO Twitter description 1`] = `"Royal wedding flowers given to Hackney hospice"`;

exports[`Canonical Articles SEO Twitter image alt 1`] = `"BBC News"`;

exports[`Canonical Articles SEO Twitter image src 1`] = `"https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png"`;

exports[`Canonical Articles SEO Twitter site 1`] = `"@BBCNews"`;

exports[`Canonical Articles SEO Twitter title 1`] = `"Royal wedding flowers given to Hackney hospice - BBC News"`;

exports[`Canonical Articles Timestamp should match text and date 1`] = `
{
  "date": "2019-05-28",
  "text": "28 May 2019",
}
`;
